--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -60,6 +60,23 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+  /* width */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--primary);
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #999999;
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #999999;
+  }
 }
 
 @layer base {
@@ -70,3 +87,4 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
