--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -72,3 +72,21 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.custom-diagonal-shape {
+  position: relative;
+  height: 50px;
+  background: transparent;
+  margin-bottom: -0.2rem;
+}
+
+.custom-diagonal-shape::before {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #27272a;
+  clip-path: polygon(0 100%, 100% 0, 100% 100%);
+}
